--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "element-ui": "^1.2.8",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
   },
